# TestWork10

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0208b0e5375f_create_tables.py  3e0845229c73_initial_tables.py  f568f37cbe62_create_tables.py
src/project/: database.py  dependencies.py  main.py
src/project/models/: __init__.py  service.py  task.py  user.py
src/project/routers/: auth.py  service.py  task.py
src/project/schemas/: __init__.py  task_schema.py  user_schema.py
src/project/test/: conftest.py  test_auth.py  test_tasks.py
src/project/utils/: auth_service.py  enums.py
